--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- displays site properly based on user's device -->
-
+    <link rel="stylesheet" href="style.css">
     <link
       rel="icon"
       type="image/png"
@@ -28,8 +28,11 @@
   <body>
     <div class="container">
       <div class="header">
-        <h3>Notifications</h3>
-        <span>3</span>
+        <div>
+          <h3>Notifications</h3>
+          <span>3</span>
+        </div>
+     
         <div>Mark all as read</div>
       </div>
       <div class="cards">
